erDiagram
    %% ============================================
    %% Sprint 3: Request Management & Shortlisting
    %% Duration: 26 Oct 2025 - 02 Nov 2025
    %% User Stories: #15, #16, #17, #18, #19, #20, #21, #26, #27, #28
    %% ============================================

    UserProfile ||--o{ UserAccount : "has role"
    UserAccount ||--o{ Request : "creates (PIN role)"
    UserAccount ||--o{ Shortlist : "saves (CSR role)"
    RequestCategory ||--o{ Request : "categorizes"
    Request ||--o{ Shortlist : "saved by"

    UserProfile {
        uuid id PK "Primary Key"
        varchar name UK "Unique role name (4 records only)"
        text description "Role description"
        json permissions "Future RBAC"
        boolean isActive "Is role active"
        timestamp createdAt
        timestamp updatedAt
    }

    UserAccount {
        uuid id PK "Primary Key"
        varchar email UK "Unique email"
        varchar password "Hashed password"
        varchar name "Full name"
        varchar phoneNumber "Contact number - nullable"
        text address "Full address - nullable"
        date dateOfBirth "Date of birth - nullable"
        enum status "ACTIVE, SUSPENDED, DELETED"
        uuid userProfileId FK "References UserProfile"
        int age "PIN field - nullable"
        varchar location "PIN field - nullable"
        text accessibilityNeeds "PIN field - nullable"
        varchar profilePhoto "PIN field - nullable"
        varchar companyName "CSR field - nullable"
        varchar companyRegistrationNumber "CSR field - unique, nullable"
        varchar industry "CSR field - nullable"
        varchar contactPerson "CSR field - nullable"
        text companyAddress "CSR field - nullable"
        varchar companyLogo "CSR field - nullable"
        varchar department "Platform Manager field - nullable"
        enum profileStatus "ACTIVE, SUSPENDED, DEACTIVATED"
        timestamp createdAt
        timestamp updatedAt
    }

    RequestCategory {
        uuid id PK "Primary Key"
        varchar name UK "Unique category name"
        text description
        varchar iconUrl
        boolean isActive
        timestamp createdAt
        timestamp updatedAt
    }

    Request {
        uuid id PK "Primary Key"
        uuid pinId FK "References UserAccount (PIN role)"
        uuid categoryId FK "References RequestCategory"
        varchar title
        text description
        enum urgency "LOW, MEDIUM, HIGH"
        timestamp dateNeeded
        varchar location
        enum status "ACTIVE, MATCHED, COMPLETED, CANCELLED"
        int viewCount "Default 0"
        int shortlistCount "Default 0"
        timestamp createdAt
        timestamp updatedAt
    }

    Shortlist {
        uuid id PK "Primary Key"
        uuid csrRepId FK "References UserAccount (CSR role)"
        uuid requestId FK "References Request"
        timestamp createdAt
    }
